# photo-ai-detector

./: .gitignore  README.md  ai_core.py  check_db.py  database.py  index.html  main.py  package-lock.json  package.json  requirements.txt  reset_db.py  run_app.bat  tailwind.config.js  vite.config.ts
scripts/: package-sidecar.ps1  validate-installer-prereqs.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/backend-launcher/: Cargo.toml
src-tauri/backend-launcher/src/: main.rs
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FaceCropImage.tsx  Gallery.tsx  MainLayout.tsx  NoiseInspector.tsx  PeopleGrid.tsx  PeopleIndex.tsx  ScanProgressOverlay.tsx
src/context/: AppContext.tsx
src/services/: api.ts
src/types/: api.ts
src/utils/: scanDisplay.ts
