[package]
name = "photo-ai-detector"
version = "1.0.0"
description = "100% offline photo organizer — Tauri desktop shell"
authors = ["Photo AI Detector"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "photo_ai_detector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
